# phd-project-gnn

./: .coverage  .gitignore  config.yml  digested_dashboards_20250320.txt  digested_dashboards_20250321.txt  digested_dashboards_20250325.txt  digested_dashboards_20250415.txt  digested_gnn_package.txt  digested_gnn_package_20250320.txt  digested_gnn_package_20250321.txt  digested_gnn_package_20250325.txt  digested_gnn_package_20250326.txt  digested_gnn_package_20250414.txt  digested_gnn_package_20250415.txt  models_unused.txt  pyproject.toml  review_report.py  test_config.yml  unused_code_report.txt  utils_unused.txt  visualization_unused.txt
dashboards/: __main__.py  digester.sh  training_winodows.ipynb
dashboards/components/: __init__.py  counts_bar.py  daily_patterns.py  monthly_data_coverage.py  pca_plot.py  sensor_map.py  window_segments.py
dashboards/data/: sensors.geojson
dashboards/dataloader_explorer/: README.md  __init__.py  __main__.py
dashboards/eda/: __main__.py  index.html
docs/: configuration_guide.md  dataflow.mmd  mkdocs.yml  project_tree.md  tensor_flow.mmd
gnn_package/: __init__.py  __main__.py  config.yml  digester.sh  prediction_service.py  run_experiment.py  tune_model.py
notebooks/: config.yml  eda.ipynb  fully_connected_graph.gml  gnn.ipynb  graph_construction.ipynb  inspect_dataloader.ipynb  inspect_raw_data.ipynb  pipeline.ipynb  prediction.ipynb  predictions.csv  private_uoapi_sensor.ipynb  raw_data.ipynb  sensor_locations.ipynb  stgnn_model.pth  test.ipynb  testing_graph_comp.ipynb  training.ipynb
test/: test.py
(+620 files in other folders)
