[tool.poetry]
name = "gnn_package"
version = "0.1.0"
description = ""
authors = ["carrowmw <c.morris-wiltshire@newcastle.ac.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.9"
numpy = "^2.2.2"
torch = "^2.5.1"
ipykernel = "^6.29.5"
networkx = "^3.4.2"
geopandas = "^1.0.1"
fiona = "^1.10.1"
plotly = "^5.24.1"
matplotlib = "^3.10.0"
folium = "^0.19.4"
mapclassify = "^2.8.1"
uoapi = "^0.2.1"
nest-asyncio = "^1.6.0"
httpx = "^0.28.1"
fastapi = "^0.115.8"
tqdm = "^4.67.1"
seaborn = "^0.13.2"
private-uoapi = {path = "/Users/administrator/Code/python/private-uo-api", develop = true}
dash = "^3.0.0"
dash-bootstrap-components = "^2.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
umap = "^0.1.1"
osmnx = "^2.0.1"
nbstripout = "^0.8.1"
gitingest = "^0.1.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
